Prevention for zooming in on page instead of map on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,7 @@ body {
 }
 
 #buildingTools {
+  touch-action: none;
   bottom: 20px;
   left: 20px;
   display: none;
@@ -155,6 +156,7 @@ body {
 }
 
 #zoomControl {
+  touch-action: none;
   z-index: 1000;
   display: flex;
   flex-direction: column;
